* InGameGUI cleanup * replaced old quit buttons with a messagebox.